# mem-ordering-demo

./: .gitignore  CMakeLists.txt
cmake/: buildsettings.cmake
demo1/: CMakeLists.txt  memory_reordering.cpp
demo2/: CMakeLists.txt  memory_reordering.cpp
demo3/: CMakeLists.txt  memory_reordering.cpp
inc/: semaphore.h
src/: CMakeLists.txt  mem_order_demo.cpp
